[gd_scene load_steps=2 format=3 uid="uid://dbbwciha3574i"]

[ext_resource type="Script" uid="uid://fc4bq6vfb4uk" path="res://src/tools/settings_tool.gd" id="1"]

[node name="SettingsTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Morrowind Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentSettingsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CurrentSettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CurrentSettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Configuration"

[node name="CurrentPathLabel" type="Label" parent="MarginContainer/VBoxContainer/CurrentSettingsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not configured"

[node name="PathSourceLabel" type="Label" parent="MarginContainer/VBoxContainer/CurrentSettingsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfigPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConfigPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Configure Path"

[node name="DataPathLabel" type="Label" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
text = "Morrowind Data Files Path:"

[node name="DataPathHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DataPathEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer/DataPathHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "e.g., /home/user/.steam/steam/steamapps/common/Morrowind/Data Files"

[node name="BrowseButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer/DataPathHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse..."

[node name="AutoDetectButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer/DataPathHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-Detect"

[node name="ESMFileLabel" type="Label" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
text = "ESM File Name:"

[node name="ESMFileEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Morrowind.esm"

[node name="ValidateLabel" type="Label" parent="MarginContainer/VBoxContainer/ConfigPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âš  Not validated"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CachePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CachePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Cache Location"

[node name="CachePathLabel" type="Label" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer"]
layout_mode = 2
text = "Cache Directory (impostors, models, terrain, etc.):"

[node name="CurrentCacheLabel" type="Label" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Not configured"

[node name="CachePathHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CachePathEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer/CachePathHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "e.g., D:/Games/GodotwindCache"

[node name="CacheBrowseButton" type="Button" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer/CachePathHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse..."

[node name="CacheResetButton" type="Button" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer/CachePathHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset to Default"

[node name="CacheInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/CachePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Subdirectories: impostors/, models/, merged_cells/, navmeshes/, ocean/, terrain/"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save All Settings"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Log:"

[node name="OutputText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select Morrowind Data Files Directory"
size = Vector2i(800, 500)
ok_button_text = "Select"

[node name="CacheFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select Cache Directory"
size = Vector2i(800, 500)
ok_button_text = "Select"
